test/files/neg/check-dead.check
check-dead.scala:8: warning: dead code following this construct
  def z1 = y1(throw new Exception)  // should warn
              ^
check-dead.scala:11: warning: dead code following this construct
  def z2 = y2(throw new Exception)  // should warn
              ^
check-dead.scala:30: warning: dead code following this construct
    throw new Exception // should warn
    ^
check-dead.scala:34: warning: dead code following this construct
    throw new Exception // should warn
    ^
error: No warnings can be incurred under -Xfatal-warnings.
four warnings found
one error found
